--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "eventbrite service integration for cp-platform",
   "main": "index.js",
   "scripts": {
-    "test": "lab test/controllers/index.js -r console -v -m 3000 -c -t 80",
+    "test": "lab lib -P spec -r console -v -m 3000 -c -t 80",
     "testjoi": "lab test/joi.test.js -r console -v -m 3000 -c -t 80",
     "testskeleton": "lab test/skeleton.js -r console -v -m 3000 -c -t 80"
   },
@@ -15,9 +15,11 @@
   "author": "Coderdojo",
   "license": "ISC",
   "devDependencies": {
+    "chai": "^4.0.2",
     "code": "^1.5.0",
     "flat": "^2.0.1",
-    "lab": "^5.15.1"
+    "lab": "^5.15.1",
+    "sinon": "^2.3.5"
   },
   "dependencies": {
     "bluebird": "^3.4.7",
