--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "code": "^1.5.0",
     "flat": "^2.0.1",
     "lab": "^5.15.1",
-    "nodemon": "^1.11.0",
+    "nodemon": "1.11.0",
     "sinon": "^2.3.5",
     "sinon-chai": "^2.11.0"
   },
@@ -38,7 +38,7 @@
     "joi": "^6.1",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
-    "request": "^2.81.0",
+    "request": "2.81.0",
     "seneca": "^2.1.0",
     "seneca-basic": "^0.5.0",
     "seneca-entity": "^1.3.0",
