--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "seneca-basic": "^0.5.0",
     "seneca-entity": "^1.3.0",
     "seneca-joi": "git://github.com/Wardormeur/seneca-joi",
+    "seneca-newrelic": "wardormeur/seneca-newrelic",
     "seneca-postgres-store": "^2.3.0"
   }
 }
