--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "lab lib -P spec -r console -v -m 3000 -c -t 80",
     "test-joi": "lab test/joi.test.js -r console -v -m 3000",
-    "test-skeleton": "lab test/skeleton.js -r console -v -m 3000 -c -t 80",
+    "test-skeleton": "lab test/skeleton.js -r console -v -m 3000 -c -t 75",
     "lint": "eslint .",
     "fix": "eslint . --fix",
     "start": "node index.js",
@@ -51,6 +51,7 @@
     "seneca-basic": "^0.5.0",
     "seneca-entity": "^1.3.0",
     "seneca-joi": "git://github.com/Wardormeur/seneca-joi",
+    "seneca-newrelic": "wardormeur/seneca-newrelic",
     "seneca-postgres-store": "^2.3.0"
   }
 }
