--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,6 +51,9 @@ workflows:
     jobs:
       - build
       - deploy:
+          context:
+            - docker-hub
+            - bastion-cluster-access
           requires:
             - build
           filters:
